# practice

./: 10_palindrome.h  10_palindrome_test.cpp  1_circle_buf.h  1_circle_buf_test.cpp  2_bit_multiply.cpp  2_bit_multiply.h  2_bit_multiply_test.cpp  3_seeding_random.cpp  3_seeding_random.h  3_seeding_random_test.cpp  4_linked_list.h  4_linked_list_test.cpp  5_number_missing.h  5_number_missing_test.cpp  6_constant_O_array.h  6_constant_O_array_test.cpp  8_power_of_two.cpp  CMakeLists.txt  README.md  c_1_binary_tree.cpp  c_1_binary_tree.h  c_1_binary_tree_test.cpp  c_2_print_uint32.cpp  c_3_black_white_sort.cpp  c_3_black_white_sort.h  c_3_black_white_sort_test.cpp  instant_array.h  instant_array_test.cpp  print_fibonacci.h  print_fibonacci_test.cpp
